# gxshell

./: .gitignore  .hystory  Cargo.toml  LICENSE.txt  README.md  update_linux.bat  update_macos  update_macos.bat  update_win.bat
.github/workflows/: Release.yml  build.yml
src/: dev.rs  env.rs  env_var.rs  gxcore.rs  gxinstaller.rs  linux.rs  main.rs  test.gx  updater.rs  windows.rs
src/compiler/: gxcompiler.rs  lexer.rs  mod.rs  parser.rs  test.gx  test.rs
src/compiler/std/gxmodules/gxmath/: gxmath.rs  mod.rs
src/compiler/std/io/: stdout.rs
src/cyber_gx_interpreter/: example.gx  gxcompiler.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
