[package]
name = "gxcmd"
authors = ["Raffael <Mendgart444>"]
description = "A shell for Devs. inspired by the windows cmd, msys and git bash"
version = "0.1.2"
repository = "https://github.com/Mendgart444/gxshell"
documentation = "https://github.com/Mendgart444/gxshell/blob/main/README.md"
edition = "2021"
keywords = ["shell", "based-on-cmd", "dev-tools", "tools"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
dirs = "5.0"
walkdir = "2.5"
which = "4.4"
subprocess = "0.2"
sysinfo = "0.30.0"
rustyline = "12.0.0"
winapi = { version = "0.3", features = ["securitybaseapi", "processthreadsapi", "winnt", "handleapi"] }
nu-ansi-term = "0.49"
git2 = "0.13"
semver = "1.0"
reedline = "0.33"
syntect = { version = "5", features = ["default-fancy"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = {version = "1.44.0", features = ["full"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
