[package]
name = "gxshell"
authors = ["Raffael <Mendgart444>"]
description = "A shell for Devs. inspired by the windows cmd, msys and git bash"
version = "0.1.5"
repository = "https://github.com/Mendgart444/gxshell"
documentation = "https://github.com/Mendgart444/gxshell/blob/main/README.md"
edition = "2021"
keywords = ["shell", "based-on-cmd", "dev-tools", "tools"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
dirs = "5.0"
walkdir = "2.5"
which = "4.4"
subprocess = "0.2"
sysinfo = "0.30.0"
rustyline = "12.0.0"
winapi = { version = "0.3", features = ["securitybaseapi", "processthreadsapi", "winnt", "handleapi"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
self_update = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nu-ansi-term = "0.50.1"
rayon = "1.7"
